# presidio-research

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMPLETE_SUMMARY.md  CORRECTED_FINAL_REPORT.md  ENTITY_MAPPING_PROPOSAL.md  ERROR_ANALYSIS_QUICK_SUMMARY.md  ERROR_ANALYSIS_REPORT.md  EXAMPLE_ERRORS.md  LICENSE  NOTICE  README.md  README_CORRECTED.md  README_DOCUMENTATION.md  RESEARCH_PAPER.md  SECURITY.md  UNSUPPORTED_ENTITY_ISSUE.md  VISUAL_SUMMARY.md  check_nb.py  check_nb2.py  fix_notebooks.py  progress.txt  pyproject.toml  replace_model_notebooks.py  ruff.toml  update_nb.py  update_notebooks.py
docs/: entity_hierarchy.md  entity_mapping_analysis.md  evaluation.md  mapping_scenarios.md  migration-guide.md  token_evaluation.md  why_canonical_entity_mapping.md
notebooks/: 1_Generate_data.ipynb  2_PII_EDA.ipynb  3_Split_by_pattern_number.ipynb  4_Evaluate_Presidio_Analyzer.ipynb  5_Evaluate_Custom_Presidio_Analyzer.ipynb  6_Evaluate_GliNER_Recognizer.ipynb  6_Interactive_Entity_Mapping.ipynb
presidio_evaluator/: __init__.py  data_objects.py  span_to_tag.py  validation.py
ralph/: cleanup_nb4.py  inspect_nb5.py  prd.json  progress.txt  update_nb4.py  update_nb5.py  update_nb6.py
scripts/: compare_corrected.py  create_entity_support_mapping.py  error_analysis.py  eval_deberta_corrected.py  eval_roberta_corrected.py  eval_stanford_corrected.py  extract_model_entities.py  two_tiered_evaluation.py  verify_entity_handling.py
tasks/: prd-canonical-mapper-redesign-and-hierarchical-eval.md  prd-dataset-anchored-mapper.md  prd-entity-mapping-workflow.md  prd-presidio-evaluator-redesign.md
tests/: __init__.py  conftest.py  test_base_model.py  test_canonical_mapper.py  test_data_objects.py  test_entity_hierarchy.py  test_entity_mapping.py  test_evaluation_result.py  test_evaluator.py  test_flair_model.py  test_interactive_mapping.py  (+13 more)
(+87 files in other folders)
