[project]
name = "presidio_evaluator"
version = "0.2.5"
description = "A framework for evaluating Presidio's Named Entity Recognition performance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Microsoft"}
]
dependencies = [
    "spacy>=3.8.0",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "tqdm>=4.67.0",
    "faker>=40.0.0",
    "scikit-learn>=1.8.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "requests>=2.32.0",
    "xmltodict>=1.0.0",
    "python-dotenv>=1.2.0",
    "plotly>=6.6.0",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6",
    "ruff>=0.8",
    "pytest-azurepipelines>=1.0.5",
    "jupyter>=1.0.0",
    "matplotlib>=3.4.3",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["presidio_evaluator/data_generator/raw_data/*"]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "inconclusive: marks tests as those that may sometimes fail due to threshold",
    "none: regular tests",
    "serial"
]
# Uncomment the following lines to enable logging during test debugging.
# log_cli = true
# log_level = "DEBUG"

filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "en-core-web-lg",
    "en-core-web-sm",
]
